# sammy

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  all.md  attempt_submodule_init.sh  conanfile.docker.txt  conanfile.txt  level1_generate_table.py  package_for_artifact_evaluation.sh  package_for_review.sh  requirements.txt  run_full_reproduction.sh  run_level1_reproduction_direct.sh  run_level1_reproduction_docker.sh  run_level2_reproduction.sh  run_level3_reproduction.sh  runme.sh  solve_instances.sh
custom_deps/gurobi_public/: README.md  conandata.yml
experiments/: extract_author_experiment_outputs.py
experiments/01_run_nontrivial_export_subproblems/: 01_run.py  02_generate_mes_entry_points.py  03_solve_mes_entry_points.py  recompress.sh
experiments/02_baseline/: 01_run_baseline.py  02_look_at_results.ipynb
experiments/02_run_default_params/: 01_run.py  03_analysis.ipynb  03_check_solutions.py  04_check_solutions.py  04_extract_summary.py  05_sammy_summary_data.json.xz  rerun_with_fix.json  simp.ipynb
experiments/03_baseline/: .gitignore  01_run_baseline.py  02_look_at_results.ipynb  02_run_all_baselines.py  README.md
experiments/03_baselines/: .gitignore  01_run_featjar_baselines.py  02_run_yasa.py  03_run_samplns.py  README.md
experiments/04_baseline_1h/: 01_run_benchmark.py  01_run_yasa.py  02_look_at_results.ipynb  03_run_samplns.py  requirements.txt
experiments/04_samplns_yasa_1h/: 01_run_yasa.py  03_run_samplns.py
experiments/04_yasa_1h/: 02_look_at_results.ipynb
experiments/05_run_initial_no_simplification/: 01_run.py  03_extract_summary.py  04_nosimp_summary_data.json.xz  requirements.txt
experiments/06_identify_nontrivial/: .gitignore  01_run.py  03_extract_summary.py  04_summary_data.json.xz  05_look_at_results.ipynb
experiments/sammy-data/analyze/: .gitignore  CMakeLists.txt  extract_concrete_features.py  pyproject.toml  setup.py
experiments/sammy-data/analyze/cmake/: CPM.cmake
experiments/sammy-data/analyze/src/: CMakeLists.txt
experiments/sammy-data/analyze/src/sample_analyzer/parser/: feature.py  instance.py  parse_dimacs.py  parse_xml.py  sat_formula.py
experiments/sammy-data/analyze/src/sample_analyzer/verify/: __init__.py  _verify.cpp
experiments/sammy-data/analyze/tests/: test_interaction_count.py
full_instances/: APL-Model.scm.json.xz  APL-Model.xml.xz  APL.scm.json.xz  APL.xml.xz  Automotive01.xml.xz  Automotive02_V1.scm.json.xz  Automotive02_V1.xml.xz  Automotive02_V2.scm.json.xz  Automotive02_V2.xml.xz  Automotive02_V3.scm.json.xz  Automotive02_V3.xml.xz  Automotive02_V4.scm.json.xz  Automotive02_V4.xml.xz  BankingSoftware.scm.json.xz  BankingSoftware.xml.xz  BattleofTanks.xml.xz  ChatClient.scm.json.xz  ChatClient.xml.xz  DMIE.scm.json.xz  DMIE.xml.xz  E-Shop.xml.xz  EMBToolkit.scm.json.xz  EMBToolkit.xml.xz  FameDB.scm.json.xz  FameDB.xml.xz  FameDB2.scm.json.xz  FameDB2.xml.xz  FeatureIDE.scm.json.xz  FeatureIDE.xml.xz  FinancialServices01_2017-05-22.scm.json.xz  FinancialServices01_2017-05-22.xml.xz  FinancialServices01_2017-09-28.scm.json.xz  FinancialServices01_2017-09-28.xml.xz  FinancialServices01_2017-10-20.scm.json.xz  FinancialServices01_2017-10-20.xml.xz  FinancialServices01_2017-11-20.scm.json.xz  FinancialServices01_2017-11-20.xml.xz  FinancialServices01_2017-12-22.scm.json.xz  FinancialServices01_2017-12-22.xml.xz  FinancialServices01_2018-01-23.scm.json.xz  (+1900 more)
include/sammy/: algorithm_ex.h  barrage.h  (+80 more)
instances/: visualization.ipynb
nontrivial_instances/: FinancialServices-2017-10-20.scm.json  FinancialServices-2017-12-22.scm.json  FinancialServices-2018-01-23.scm.json  FinancialServices-2018-03-26.scm.json  FinancialServices-2018-04-23.scm.json  FinancialServices-2018-05-09.scm.json  Violet.scm.json  aaed2000.scm.json  am31_sim.scm.json  atlas_mips32_4kc.scm.json  busybox-1.18.0.scm.json  busybox-2017-07-15_17-34-33.scm.json  coreboot.scm.json  freetz.scm.json  toybox-2020-12-06_00-02-46.scm.json  uClinux-config.scm.json
sammy_benchmark_instances/: APL-Model.scm.json  APL-Model.scm.json.xz  APL.scm.json  APL.scm.json.xz  Automotive01.scm.json  Automotive01.scm.json.xz  Automotive02_V1.scm.json  Automotive02_V1.scm.json.xz  Automotive02_V2.scm.json  Automotive02_V2.scm.json.xz  Automotive02_V3.scm.json  Automotive02_V3.scm.json.xz  Automotive02_V4.scm.json  Automotive02_V4.scm.json.xz  BankingSoftware.scm.json  BankingSoftware.scm.json.xz  BattleofTanks.scm.json  BattleofTanks.scm.json.xz  BattleofTanks.xml  ChatClient.scm.json  ChatClient.scm.json.xz  DMIE.scm.json  DMIE.scm.json.xz  E-Shop.scm.json  E-Shop.scm.json.xz  EMBToolkit.scm.json.xz  FameDB.scm.json  FameDB.scm.json.xz  FeatureIDE.scm.json  FeatureIDE.scm.json.xz  FreeBSD-8_0_0.scm.json.xz  PPU.scm.json  PPU.scm.json.xz  SafeBali.scm.json  SafeBali.scm.json.xz  SortingLine.scm.json  SortingLine.scm.json.xz  TightVNC.scm.json  TightVNC.scm.json.xz  Violet.scm.json  (+68 more)
scripts/: extract_xml_instances_from_tarfile_set.py  feature_name_mapping_to_tuple_list.py  instance_to_generic_json.py  solution_to_feature_name_mapping.py
src/: CMakeLists.txt  amend_subproblem_with_default_mes.cpp  check_solution_and_mes.cpp  cuda_iteration.cu  generate_subproblem_mes_entry_points.cpp  io.h  process_unix.cpp  solve.cpp  solve_amended_subproblem.cpp  solve_subproblems_mes_entry_points.cpp
test/: CMakeLists.txt  sammy_test_instance_soletta.cpp  test_bitset_operations.cpp  test_bounded_variable_elimination.cpp  test_cadical_binding.cpp  test_clique_sat_dsatur.cpp  test_clique_storage.cpp  test_cryptominisat_binding.cpp  test_cuda.cpp  test_detect_equalities.cpp  test_eliminate_subsumed.cpp  test_external_sat.cpp  test_implied_vertices.cpp  test_initial_heuristic.cpp  test_instances.h  test_lns_subproblem_solvers.cpp  test_main.cpp  test_partial_solution.cpp  test_propagator.cpp  test_sat_k_coloring.cpp  test_satdsatur.cpp  test_subproblem_solver_with_mes.cpp  test_universe_subgraph.cpp
test/sammy_test_data/: soletta-2015-07-02_18-48-59-subproblem1.json.xz  soletta_17_03_09_initial.json
(+1822 files in other folders)
